--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -127,11 +127,10 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="wrap_content"
         android:background="?android:attr/windowBackground"
         app:itemActiveIndicatorStyle="@style/ShapeAppearance.Material3.Corner.None"
         app:itemBackground="@color/phinmaGreen"
-        app:itemIconSize="60dp"
         app:itemIconTint="@color/navbar_icon_colors"
         app:itemRippleColor="@color/phinmaYellow"
         app:itemTextColor="@color/white"
@@ -142,7 +141,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
-        app:menu="@menu/bottom_nav" />
+        app:menu="@menu/bottom_nav"
+        style="@style/CustomBottomNavigationView" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
