--- a/app/src/main/res/layout/activity_sch_item_layout.xml
+++ b/app/src/main/res/layout/activity_sch_item_layout.xml
@@ -38,6 +38,7 @@
                 android:gravity="center"
                 android:text="PHINMA SCHOLARSHIP"
                 android:textColor="@color/white"
+                android:fontFamily="@font/josefin_sans_bold"
                 android:textSize="20sp"
                 tools:ignore="HardcodedText,TextSizeCheck" />
 
