--- a/app/src/main/res/layout/activity_scholarship_page1.xml
+++ b/app/src/main/res/layout/activity_scholarship_page1.xml
@@ -6,12 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/offwhite"
     tools:context=".scholarships.ScholarshipPage1">
+
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="581dp"
+        android:layout_height="543dp"
         android:background="@drawable/sch_custom_bg_page1"
         android:clipChildren="false"
         android:clipToPadding="false"
@@ -47,17 +49,16 @@
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="300dp"
-            android:layout_height="125dp"
+            android:layout_width="287dp"
+            android:layout_height="100dp"
             app:srcCompat="@drawable/sch_hands"
             tools:ignore="ContentDescription" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="137dp"
-        android:layout_marginTop="10dp"
-        android:gravity="top"
+        android:layout_height="match_parent"
+        android:gravity="bottom"
         android:orientation="vertical">
 
         <TextView
@@ -66,24 +67,38 @@
             android:fontFamily="@font/josefin_sans_bold"
             android:gravity="center"
             android:text="@string/sch_descriptionScholarshipsList"
+            android:textColor="@color/black"
             android:textSize="20sp"
             tools:ignore="TextSizeCheck" />
 
         <ImageButton
-            android:contentDescription="button for lists of scholarships"
             android:id="@+id/btn_scholarship_lists"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:background="#00FFFFFF"
+            android:contentDescription="button for lists of scholarships"
             android:src="@drawable/arrow_down"
             tools:ignore="HardcodedText" />
 
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottomNavigationView"
+            style="@style/CustomBottomNavigationView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:background="?android:attr/windowBackground"
+            app:itemActiveIndicatorStyle="@style/ShapeAppearance.Material3.Corner.None"
+            app:itemBackground="@color/phinmaGreen"
+            app:itemIconTint="@color/navbar_icon_colors"
+            app:itemRippleColor="@color/phinmaYellow"
+            app:itemTextColor="@color/white"
+            app:labelVisibilityMode="unlabeled"
+            app:menu="@menu/bottom_nav" />
+
+
     </LinearLayout>
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomNavigationView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:menu="@menu/bottom_nav"
-        tools:ignore="VisualLintBottomNav" />
+
+
 </LinearLayout>
