--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,10 +25,11 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="259dp"
-        android:layout_height="23dp"
-        android:fontFamily="sans-serif-black"
-        android:text="LEEIAN MATHEW P. LACORTE"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/josefin_sans_bold"
+        android:text="@string/leeian_name"
+        android:textColor="@color/black"
         android:textAlignment="center"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -42,8 +43,9 @@
         android:layout_width="147dp"
         android:layout_height="21dp"
         android:layout_marginTop="1dp"
-        android:fontFamily="sans-serif-black"
+        android:fontFamily="@font/montserrat_medium"
         android:text="03-2122-033288"
+        android:textColor="@color/black"
         android:textAlignment="center"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -54,10 +56,11 @@
 
     <TextView
         android:id="@+id/textView8"
-        android:layout_width="151dp"
+        android:layout_width="wrap_content"
         android:layout_height="24dp"
         android:fontFamily="sans-serif-black"
         android:text="Personal Details"
+        android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/scrollView2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -84,10 +87,11 @@
 
             <TextView
                 android:id="@+id/textView5"
-                android:layout_width="78dp"
+                android:layout_width="wrap_content"
                 android:layout_height="32dp"
                 android:fontFamily="sans-serif-black"
                 android:text="Name"
+                android:textColor="@color/white"
                 android:textSize="20sp" />
 
             <EditText
@@ -98,30 +102,44 @@
                 android:enabled="false"
                 android:fontFamily="sans-serif-medium"
                 android:inputType="text"
+                android:textColor="@color/black"
                 android:text="Leeian Matthew P. Lacorte" />
 
             <TextView
                 android:id="@+id/textView6"
-                android:layout_width="78dp"
+                android:layout_width="wrap_content"
                 android:layout_height="32dp"
                 android:fontFamily="sans-serif-black"
                 android:text="Campus"
+                android:textColor="@color/white"
                 android:textSize="20sp" />
 
-            <Spinner
-                android:id="@+id/spinnerCampus"
+<!--            <Spinner-->
+<!--                android:id="@+id/spinnerCampus"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:enabled="false"-->
+<!--                android:entries="@array/campus_array"-->
+<!--                android:textColor="@color/black"-->
+<!--                android:fontFamily="sans-serif-medium" />-->
+
+            <EditText
+                android:id="@+id/campusName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:ems="10"
                 android:enabled="false"
-                android:entries="@array/campus_array"
-                android:fontFamily="sans-serif-medium" />
-
+                android:fontFamily="sans-serif-medium"
+                android:inputType="text"
+                android:textColor="@color/black"
+                android:text="PHINMA Upang College Urdaneta" />
 
             <TextView
                 android:id="@+id/textView7"
-                android:layout_width="195dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-black"
+                android:textColor="@color/white"
                 android:text="Course"
                 android:textSize="20sp" />
 
@@ -131,14 +149,16 @@
                 android:layout_height="wrap_content"
                 android:enabled="false"
                 android:entries="@array/course_array"
+                android:textColor="@color/black"
                 android:fontFamily="sans-serif-medium" />
 
             <TextView
                 android:id="@+id/textView9"
-                android:layout_width="78dp"
+                android:layout_width="wrap_content"
                 android:layout_height="32dp"
                 android:fontFamily="sans-serif-black"
                 android:text="Email"
+                android:textColor="@color/white"
                 android:textSize="20sp" />
 
             <EditText
@@ -149,14 +169,16 @@
                 android:enabled="false"
                 android:fontFamily="sans-serif-medium"
                 android:inputType="text"
+                android:textColor="@color/black"
                 android:text="lepa.lacorte.up@phinmaed.com" />
 
             <TextView
                 android:id="@+id/textView4"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="32dp"
                 android:fontFamily="sans-serif-black"
                 android:text="Contact Number"
+                android:textColor="@color/white"
                 android:textSize="20sp" />
 
             <EditText
@@ -167,14 +189,16 @@
                 android:enabled="false"
                 android:fontFamily="sans-serif-medium"
                 android:inputType="text"
-                android:text="Phone Number" />
+                android:textColor="@color/black"
+                android:text="XXXX-XXX-XXXX" />
 
             <TextView
                 android:id="@+id/textView14"
-                android:layout_width="78dp"
+                android:layout_width="wrap_content"
                 android:layout_height="32dp"
                 android:fontFamily="sans-serif-black"
                 android:text="Birthdate"
+                android:textColor="@color/white"
                 android:textSize="18sp" />
 
             <EditText
@@ -185,7 +209,8 @@
                 android:enabled="false"
                 android:focusable="false"
                 android:fontFamily="sans-serif-medium"
-                android:hint="Select Date"
+                android:text="5/19/2002"
+                android:textColor="@color/black"
                 android:inputType="none" />
 
         </LinearLayout>
