added flex remote desc

--- a/app/src/main/res/layout/activity_remote_courses.xml
+++ b/app/src/main/res/layout/activity_remote_courses.xml
@@ -5,7 +5,74 @@
     android:background="@color/offwhite"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="16dp"
+        android:background="@drawable/gray_bg">
 
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/campus_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="30dp"
+            android:text="Remote Courses"
+            android:textColor="#2E4D1E"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textAlignment="center"/>
+
+        <Button
+            android:id="@+id/button_management_Acc"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_marginBottom="16dp"
+            android:text="College of Management and Accountancy"
+            android:drawableEnd="@drawable/arrow_right"
+            android:padding="16dp"
+            android:textSize="16sp" />
+
+        <Button
+            android:id="@+id/button_bs_crim"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_marginBottom="16dp"
+            android:text="College of Criminal Justice Education"
+            android:drawableEnd="@drawable/arrow_right"
+            android:padding="16dp"
+            android:textSize="16sp" />
+
+        <Button
+            android:id="@+id/button_bs_it"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_marginBottom="16dp"
+            android:text="College of Information Technology"
+            android:drawableEnd="@drawable/arrow_right"
+            android:padding="16dp"
+            android:textSize="16sp" />
+
+        <Button
+            android:id="@+id/button_bs_educ_liberal_arts"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_marginBottom="16dp"
+            android:text="College of Education and Liberal Arts"
+            android:drawableEnd="@drawable/arrow_right"
+            android:padding="16dp"
+            android:textSize="16sp" />
+
+
+
+    </LinearLayout>
+    </ScrollView>
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
         style="@style/CustomBottomNavigationView"
@@ -25,5 +92,4 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
         app:menu="@menu/bottom_nav" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
