Revert "Fix the bug where the components in the Modality tab disappear whenever the back button is pressed after opening one of the buttons"
This reverts commit 147976d132c97426ec173d20c5b6acc0b4312182.

--- a/app/src/main/res/layout/activity_manage_accountancy.xml
+++ b/app/src/main/res/layout/activity_manage_accountancy.xml
@@ -39,7 +39,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
-                android:text="BS Business Administration - Financial/Marketing Management"
+                android:text="BS Business Administration - Financial Management"
                 android:textColor="@color/black"
                 android:textSize="15sp"
                 android:textStyle="bold" />
