--- a/app/src/main/res/layout/activity_school_selection.xml
+++ b/app/src/main/res/layout/activity_school_selection.xml
@@ -5,6 +5,15 @@
     android:layout_height="match_parent"
     android:background="@drawable/bg_schoolselection">
 
+    <FrameLayout
+        android:id="@+id/flFragmentContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:elevation="10dp"
+        android:background="@android:color/transparent" />
+
     <TextView
         android:id="@+id/textview_school_selection"
         android:layout_width="match_parent"
