--- a/app/src/main/res/layout/activity_school_selection.xml
+++ b/app/src/main/res/layout/activity_school_selection.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:elevation="10dp"
         android:background="@android:color/transparent" />
 
@@ -22,7 +22,11 @@
         android:fontFamily="@font/myriad_pro_bold"
         android:gravity="center"
         android:text="SCHOOLS"
-        android:textColor="@color/phinmaGreen"
+        android:textColor="@color/white"
+        android:shadowColor="@color/black"
+        android:shadowDx="7"
+        android:shadowDy="7"
+        android:shadowRadius="6"
         android:textSize="60sp" />
 
     <ScrollView
