Change arrow_down button to arrow_right because I don't know how to apply the slide down transition nor do I have the energy to learn it because it's 6am

--- a/app/src/main/res/layout/activity_scholarship_page1.xml
+++ b/app/src/main/res/layout/activity_scholarship_page1.xml
@@ -78,7 +78,7 @@
             android:layout_gravity="center"
             android:background="#00FFFFFF"
             android:contentDescription="button for lists of scholarships"
-            android:src="@drawable/arrow_down"
+            android:src="@drawable/arrow_right2"
             tools:ignore="HardcodedText" />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
