--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,6 +22,17 @@
             android:orientation="vertical"
             android:padding="30dp" >
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Student Handbook App"
+                android:textColor="@color/phinmaGreen"
+                android:gravity="center"
+                android:fontFamily="@font/josefin_sans_bold"
+                android:textSize="20sp"
+                android:textAllCaps="true"
+                android:layout_marginBottom="10dp" />
+
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
