--- a/app/src/main/res/layout/fragment_flex_remote.xml
+++ b/app/src/main/res/layout/fragment_flex_remote.xml
@@ -66,7 +66,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="#00FFFFFF"
-            android:src="@drawable/arrow_down"
+            android:src="@drawable/arrow_right2"
             tools:ignore="HardcodedText" />
     </LinearLayout>
 
