Refactor package names and update project configurations
Refactored the project by renaming the base package from `com.example.ite393exam` to `com.example.studenthandbookapp`. This affects the package declaration in all Java and Kotlin files, as well as the application ID, namespace, and root project name in build configuration files.
Additionally, it updates:
- the app label,
- the string resources,
- project dependencies
- the gradle wrapper.
- removed the bold text from the description of the Bachelor of Science in Accountancy program in the management activity.
- Add Registration class

--- a/app/src/main/res/layout/activity_management.xml
+++ b/app/src/main/res/layout/activity_management.xml
@@ -51,8 +51,7 @@
                 android:layout_marginBottom="16dp"
                 android:text="The Bachelor of Science in Accountancy program is a four-year course that prepares students for a professional career in Accountancy, particularly in Public Accounting. The program aims to guide students by providing them technical knowledge, skills and abilities required in the accountancy profession. We also help them develop the values of integrity, independence and skepticism necessary for making professional judgments. Our program uses a competency framework for professional accountants from the International Federation of Accountants, so that graduates may take certifications in Accountancy by the Philippine Professional Regulatory Commission and other international certifying bodies."
                 android:textColor="@color/black"
-                android:textSize="13sp"
-                android:textStyle="bold" />
+                android:textSize="13sp" />
 
 
 
