--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -8,7 +8,7 @@
         <item name="cornerSizeBottomRight">0dp</item>
         <item name="color">@color/white</item>
     </style>
-    <style name="Base.Theme.ITE393Exam" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.studenthandbookapp" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
