--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,10 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Base.Theme.ITE393Exam" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.studenthandbookapp" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
 
-    <style name="Theme.ITE393Exam" parent="Base.Theme.ITE393Exam" />
+    <style name="Theme.studenthandbookapp" parent="Base.Theme.studenthandbookapp" />
 </resources>
