--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,11 +6,13 @@
     <color name="colorPrimaryDark">#2B2B2B</color>
     <color name="colorAccent">#FF6464</color>
     <color name="offwhite">#E4E3DF</color>
-<!--    <color name="offwhite">#FFFDF6</color>-->
     <color name="phinmaGreen">#3A4F24</color>
     <color name="phinmaYellow">#FFD000</color>
     <color name="light_font">#FBFBFB</color>
     <color name="grey_font">#ff9e9e9e</color>
     <color name="text_shadow">#7F000000</color>
     <color name="text_shadow_white">#FFFFFF</color>
+    <color name="gray">#BEBEBE</color>
+    <color name="custom_gray">#808080</color>
+
 </resources>
