Implement Bottom Navigation, Drawer Navigation, and Top App Bar with New Activities
- Added `DrawerNavigationHelper` and `TopAppBarHelper` for managing drawer and top app bar navigation, respectively.
- Created `drawer_menu.xml` for defining the drawer menu items.
- Implemented `drawer_header.xml` for the header of the drawer layout.
- Added a profile action in the top app bar through `top_app_bar_menu.xml`.
- Updated `AndroidManifest.xml` to include `CalendarActivity`, `Manual`, and `Support` activities.
- Modified `styles.xml` to customize the bottom navigation view style, including item size, padding, background color, and text color, using a custom `BottomNavigationView` style.
- Modified `BottomNavigationHelper` to include new activities and use `Home`, `CalendarActivity`, and `Manual`.
- Created `bottom_nav.xml` for defining bottom navigation items and updated navigation icons.
- Add new icons

--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -2,20 +2,20 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:title="Profile"
-        android:id="@+id/nav_profile"
-        android:icon="@drawable/navbar_profile"/>
+        android:title="Home"
+        android:id="@+id/nav_home"
+        android:icon="@drawable/navbar_home"/>
     <item
         android:title="Map"
         android:id="@+id/nav_map"
         android:icon="@drawable/navbar_map"/>
     <item
-        android:title="Modalities"
-        android:id="@+id/nav_modalities"
-        android:icon="@drawable/navbar_modalities"/>
+        android:title="Calendar"
+        android:id="@+id/nav_calendar"
+        android:icon="@drawable/navbar_calendar"/>
     <item
-        android:title="Scholarship"
-        android:id="@+id/nav_scholarship"
-        android:icon="@drawable/navbar_scholarship"/>
+        android:title="Manual"
+        android:id="@+id/nav_manual"
+        android:icon="@drawable/navbar_manual"/>
 
 </menu>
