--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,10 +18,18 @@
         <item name="cornerSize">50%</item>
     </style>
 
-    <style name="CustomBottomNavigationView" parent="Widget.MaterialComponents.BottomNavigationView">
-        <item name="itemIconSize">60dp</item>
+    <style name="BottomNavigationView" parent="Widget.MaterialComponents.BottomNavigationView">
+        <item name="menu">@menu/bottom_nav</item>
+        <item name="itemIconSize">30dp</item>
         <item name="itemPaddingTop">4dp</item>
         <item name="itemPaddingBottom">4dp</item>
         <item name="itemHorizontalTranslationEnabled">false</item>
+        <item name="itemBackground">@color/phinmaGreen</item>
+        <item name="itemIconTint">@color/navbar_icon_colors</item>
+        <item name="itemTextColor">@color/navbar_icon_colors</item>
+        <item name="itemActiveIndicatorStyle">@style/ShapeAppearance.Material3.Corner.None</item>
+        <item name="itemRippleColor">@color/phinmaYellow</item>
+        <item name="labelVisibilityMode">labeled</item>
+        <item name="elevation">8dp</item>
     </style>
 </resources>
