--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,4 +32,14 @@
         <item name="labelVisibilityMode">labeled</item>
         <item name="elevation">8dp</item>
     </style>
+
+    <style name="SideDrawerView">
+        <item name="android:background">@color/white</item>
+        <item name="itemIconTint">@color/black</item>
+        <item name="itemTextColor">@color/black</item>
+        <item name="android:fitsSystemWindows">true</item>
+        <item name="headerLayout">@layout/drawer_header</item>"
+        <item name="menu">@menu/drawer_menu</item>
+    </style>
+
 </resources>
